Added more technology logos, updated resume, cut video loop for smaller file size and cleaner transition loop

--- a/index.html
+++ b/index.html
@@ -187,16 +187,19 @@
 
         <div class="clients-slider swiper-container">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/html.png" class="img-fluid" alt="Html"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/css.png" class="img-fluid" alt="Css"></div>
+            <div class="swiper-slide"><img src="./assets/img/technology-logo/html.png" class="img-fluid" alt="HTML"></div>
+            <div class="swiper-slide"><img src="./assets/img/technology-logo/css.png" class="img-fluid" alt="CSS"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/javascript.png" class="img-fluid" alt="Javascript"></div>
-            <div class="swiper-slide"><img src="./assets/img/technology-logo/node-js.png" class="img-fluid" alt="node-js" height="100"></div>
+            <div class="swiper-slide"><img src="./assets/img/technology-logo/node-js.png" class="img-fluid" alt="NodeJS" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/python.png" class="img-fluid" alt="Python"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/django.png" class="img-fluid" alt="Django" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/postgresql.png" class="img-fluid" alt="Postgresql" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/mongodb.png" class="img-fluid" alt="MongoDB" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/react.png" class="img-fluid" alt="React" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/graphql.png" class="img-fluid" alt="GraphQL" height="100"></div>
+            <div class="swiper-slide"><img src="./assets/img/technology-logo/nextjs.png" class="img-fluid" alt="NextJS" height="100"></div>
+            <div class="swiper-slide"><img src="./assets/img/technology-logo/gatsby.png" class="img-fluid" alt="GatsbyJS" height="100"></div>
+            <div class="swiper-slide"><img src="./assets/img/technology-logo/typescript.png" class="img-fluid" alt="TypeScript" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/java.png" class="img-fluid" alt="Java" height="100"></div>
             <div class="swiper-slide"><img src="./assets/img/technology-logo/php.png" class="img-fluid" alt="PHP" height="100"></div>
           </div>
